=== Edge

* Pass string encoding through in Ruby 1.9. [Jason Garber]

* Allow two-letter acronyms. [Jason Garber]

* Removed vertical alignment in lists. It doesn't make sense and it conflicts with other things. [Jason Garber]

* Allow table cells to be empty. [Jason Garber]

* Resolve conflict between table signature and blocks beginning with t. [Jason Garber]

* Enable code signature to capture trailing space when in square brackets. [Jason Garber]

* Allow emphasized phrases to include underscores. [Jason Garber]

* Include an ending question mark in a citation. [Jason Garber]

* Fix <notextile> blocks being included in following paragraph. [Jason Garber]

* Preserve leading whitespace in pre and bc blocks. [Jason Garber]

* Don't add hard break after preexisting <br />. [Jason Garber]

* Switched tests from Test::Unit to Rspec. [Jason Garber]

* Accept multiline content in table cells. [Jason Garber]

* Change to list attributes so you can give style/class to list items (taken from PyTextile).  Breaks backwards compatibility.
  
  Before, the style applied to the first list item applied to the entire list.  Now, class/id/style placed
  before the list applies to the list element and after the hash or asterisk applies to the list item.  For
  example:
                                   <ul id="groceries">
    (#groceries)# Milk               <li>milk</li>
    # Eggs                           <li>eggs</li>
    #(optional) granola              <li class="optional">granola</li>
                                   </ul>

* Separated attributes out to have their own mark/store variable and regs.  This way, they won't conflict with captured text or backtracked text. [Jason Garber]

* Added a RedCloth::EXTENSION_LANGUAGE constant so you can tell what version of the parser you are using. [Jason Garber]

* Added a NotCompiledError to give a friendlier message when people just unpack RedCloth into their projects. [Jason Garber]
